--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="language">Language</string>
     <string name="follow_system">Follow system</string>
     <string name="english" translatable="false">English</string>
-    <string name="chinese" translatable="false">中文</string>
+    <string name="simplified_chinese" translatable="false">简体中文</string>
+    <string name="traditional_chinese" translatable="false">繁體中文</string>
 </resources>
