--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="english" translatable="false">English</string>
     <string name="simplified_chinese" translatable="false">简体中文</string>
     <string name="traditional_chinese" translatable="false">繁體中文</string>
+    <string name="vietnamese">Việt Nam</string>
 </resources>
