--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="simplified_chinese" translatable="false">简体中文</string>
     <string name="traditional_chinese" translatable="false">繁體中文</string>
     <string name="vietnamese">Việt Nam</string>
+    <string name="russian" translatable="false">Русский</string>
 </resources>
