--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="english" translatable="false">English</string>
     <string name="greek" translatable="false">Ελληνικά</string>
     <string name="japanese" translatable="false">日本語</string>
+    <string name="russian" translatable="false">Русский</string>
     <string name="simplified_chinese" translatable="false">简体中文</string>
     <string name="traditional_chinese" translatable="false">繁體中文</string>
-    <string name="vietnamese">Việt Nam</string>
-    <string name="russian" translatable="false">Русский</string>
+    <string name="vietnamese" translatable="false">Việt Nam</string>
 </resources>
