--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,6 @@
     <string name="about">О приложении</string>
     <string name="language">Язык</string>
     <string name="follow_system">Как в системе</string>
+    <string name="nepali" translatable="false">नेपाली</string>
+
 </resources>
