--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -22,4 +22,5 @@
     <string name="about">アプリについて</string>
     <string name="language">言語</string>
     <string name="follow_system">システムに従う</string>
+    <string name="nepali" translatable="false">नेपाली</string>
 </resources>
