--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -23,4 +23,5 @@
     <string name="about">關於</string>
     <string name="language">語言</string>
     <string name="follow_system">系統預設</string>
+    <string name="nepali" translatable="false">नेपाली</string>
 </resources>
