--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="simplified_chinese" translatable="false">简体中文</string>
     <string name="traditional_chinese" translatable="false">繁體中文</string>
     <string name="vietnamese" translatable="false">Việt Nam</string>
+    <string name="turkish" translatable="false">Türkçe</string>
+  
 </resources>
