--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="language">Language</string>
     <string name="follow_system">Follow system</string>
     <string name="arabic" translatable="false">العربية</string>
+    <string name="persian" translatable="false">فارسی</string>
     <string name="english" translatable="false">English</string>
     <string name="greek" translatable="false">Ελληνικά</string>
     <string name="japanese" translatable="false">日本語</string>
