--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,13 +24,15 @@
     <string name="language">Language</string>
     <string name="follow_system">Follow system</string>
     <string name="arabic" translatable="false">العربية</string>
-    <string name="persian" translatable="false">فارسی</string>
+    <string name="chinese_simplified" translatable="false">简体中文</string>
+    <string name="chinese_traditional" translatable="false">繁體中文</string>
     <string name="english" translatable="false">English</string>
     <string name="greek" translatable="false">Ελληνικά</string>
     <string name="japanese" translatable="false">日本語</string>
+    <string name="odia" translatable="false">ଓଡ଼ିଆ</string>
+    <string name="persian" translatable="false">فارسی</string>
     <string name="russian" translatable="false">Русский</string>
-    <string name="simplified_chinese" translatable="false">简体中文</string>
-    <string name="traditional_chinese" translatable="false">繁體中文</string>
+    <string name="spanish" translatable="false">Español</string>
     <string name="turkish" translatable="false">Türkçe</string>
     <string name="vietnamese" translatable="false">Việt Nam</string>
 </resources>
